# dev-docs

./: .editorconfig  .env.example  .gitignore  .lycheeignore  .pre-commit-config.yaml  .prettierrc  .spellcheck.yml  .vale.ini  .wordlist.txt  Dockerfile  LICENSE  Makefile  README.md  astro.config.mjs  conf.py  docker-compose.yml  ec.config.mjs  eslint.config.js  frontmatter.json  index.md  markdoc-formatter.mjs  markdoc.config.json  markdoc.config.mjs  package-lock.json  package.json  pyproject.toml  renovate.json  serve.py  setup.sh  skip-smartling-build.cjs  skip-smartling-build.sh  tailwind.config.cjs  tsconfig.json  update-headings.py  vercel.json
.github/scripts/: extract_links.py  fix-i18n.sh  fixTranslations.mjs  fix_i18n.py  pyproject.toml  translations.sh
docs/: Dockerfile  _toc.yml  conf.py  glossary.md  index.md  pyproject.toml  serve.py
docs/_static/css/: custom.css
docs/_static/js/: mermaid.js
docs/android/: index.md
docs/android/3rd-party-plugin/: criteo-plugin  criteo-plugin.md
docs/android/configuration/: background.md  deep-linking.md  delay.md  disable.md  external-device-id.md  preinstalled.md  privacy.md  push-tokens.md
docs/android/integrations/: admob.md  admost.md  applovin-max.md  batch.com.md  helium.md  ironsource.md  mixpanel.md  segment.md  unity.md
docs/android/recording/: adrevenue.md  attribution.md  callbacks.md  device-info.md  events.md  session-parameters.md  subscriptions.md
docs/android/reference/: AdjustAdRevenue.md  AdjustAttribution.md  AdjustEvent.md  AdjustPlayStoreSubscription.md  AdjustThirdPartySharing.md  index.md
docs/android/setup/: index.md  multi-process.md  preinstall-tool.md
docs/android/third-party-plugin/: criteo-plugin.md  facebook-pixel.md  imei-plugin.md  index.md  oaid-plugin.md  samsung-referrer-plugin.md  sociomantic-plugin.md  trademob-plugin.md  vivio-referrer-plugin.md  xiaomi-referrer-plugin.md
docs/api/ad-spend-api/: cost-endpoint.md  cost-id.md  index.md
docs/api/app-automation-api/: app-endpoint.md  authentication.md  campaign-endpoint.md  channel-setup.md  index.md  status-endpoint.md
docs/api/blocklist-api/: authentication.md  blocklist.md  index.md  unblocklist.md
docs/api/campaign-api/: authentication.md  create-tracker.md  get-partners.md  get-subtrackers.md  get-trackers.md  index.md  update-tracker.md
docs/api/device-api/: authentication.md  forget.md  index.md  inspect.md
docs/api/gdpr-api/: index.md
docs/api/kpi-service/: authentication.md  cohort-metrics.md  event-metrics.md  grouping.md  index.md  overview-metrics.md  skad-metrics.md
docs/api/rs-api/: authentication.md  csv.md  events.md  filters-data.md  index.md  pivot.md  report.md
docs/flutter/: index.md
docs/flutter/configuration/: att.md  background.md  deep-linking.md  delay.md  disable.md  external-device-id.md  preinstalled.md  privacy.md  push-tokens.md  skad.md
docs/flutter/recording/: attribution.md  callbacks.md  device-info.md  events.md  index.md  session-parameters.md  subscriptions.md
docs/flutter/reference/: AdjustAppStoreSubscription.md  AdjustAttribution.md  AdjustEvent.md  AdjustPlayStoreSubscription.md  AdjustThirdPartySharing.md
docs/fragments/: configuration-features.md  measurement-features.md
docs/fragments/callouts/: att-prompt-tip.md  support-level.md
docs/fragments/data/: att-auth-statuses.md  proguard-file.md
docs/ios/: index.md
docs/react-native/: index.md
docs/unity/: index.md
docs/web/: index.md
docs/windows/: index.md
(+8101 files in other folders)
