[tool.poetry]
name = "Adjust SDK documentation"
version = "0.1.0"
description = ""
authors = ["Adjust GmbH"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "==5.3.0"
myst-parser = "==1.0.0"
sphinx-multiversion = "==0.2.4"
sphinx-intl = "==2.1.0"
sphinx_design = "==0.4.1"
sphinxcontrib-mermaid = {git = "https://github.com/Sporiff/sphinxcontrib-mermaid", rev = "cdn-change"}
sphinxcontrib-images = "==0.9.4"
sphinx-copybutton = "==0.5.1"
sphinx-tippy = "==0.4.1"
accessible-pygments = "^0.0.4"
sphinx-external-toc = "^0.3.1"
furo = "==2023.03.27"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "==2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
