[tool.poetry]
name = "Adjust SDK documentation"
version = "0.1.0"
description = ""
authors = ["Adjust GmbH"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "==6.2.1"
myst-parser = "==1.0.0"
sphinx-multiversion = "==0.2.4"
sphinx-intl = "==2.1.0"
sphinx_design = "==0.4.1"
sphinxcontrib-mermaid = {git = "https://github.com/Sporiff/sphinxcontrib-mermaid" }
sphinxcontrib-images = "==0.9.4"
sphinx-copybutton = "==0.5.2"
sphinx-tippy = "==0.4.1"
accessible-pygments = "==0.0.4"
sphinx-external-toc = {git = "https://github.com/Sporiff/sphinx-external-toc" }
furo = "==2023.5.20"
pygments-csv-lexer = "==0.1.3"
jsx-lexer = "==2.0.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "==2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
