[tool.poetry]
name = "Adjust SDK documentation"
version = "0.1.0"
description = ""
authors = ["Adjust GmbH"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "==5.3.0"
myst-parser = "==0.18.1"
sphinx-multiversion = "0.2.4"
sphinx-intl = "2.1.0"
sphinx_design = "==0.3.0"
sphinxcontrib-mermaid = "0.8"
sphinxcontrib-images = "^0.9.4"
sphinx-copybutton = "^0.5.1"
sphinx-tippy = "^0.4.1"
sphinx-book-theme = {version = "^1.0.0rc2", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
