[tool.poetry]
name = "fix-i18n"
version = "0.1.0"
description = "A small Python script used to fix up translated files coming from Smartling"
authors = ["Ciarán Ainsworth <cda@sporiff.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
